# taster

./: .buildinfo  CHANGELOG.md  CITATION.cff  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build.yml
_modules/: index.html
_modules/taster/: taster.html  utils.html
_sources/: index.md.txt
_sources/api/: index.md.txt  utils.md.txt
_sources/tutorials/: index.md.txt
api/: index.html  taster.html  utils.html
docs/source/: conf.py
docs/source/api/: taster.md
docs/source/tutorials/: getting_started.md
src/taster/: __init__.py  taster.py  utils.py
tests/: test_taster.py
tutorials/: getting_started.html  index.html
